--- a/fleet/i18n/pl.po
+++ b/fleet/i18n/pl.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: openobject-addons\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2013-06-07 19:37+0000\n"
-"PO-Revision-Date: 2012-12-21 23:00+0000\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"PO-Revision-Date: 2013-11-02 06:21+0000\n"
+"Last-Translator: Mirosław Bojanowicz <miroslaw.bojanowicz@gmail.com>\n"
 "Language-Team: Polish <pl@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-07-11 05:58+0000\n"
-"X-Generator: Launchpad (build 16696)\n"
+"X-Launchpad-Export-Date: 2013-11-02 06:23+0000\n"
+"X-Generator: Launchpad (build 16820)\n"
 
 #. module: fleet
 #: selection:fleet.vehicle,fuel_type:0
@@ -30,12 +30,12 @@ msgstr "Kompaktowy"
 #. module: fleet
 #: model:fleet.service.type,name:fleet.type_service_1
 msgid "A/C Compressor Replacement"
-msgstr ""
+msgstr "Sprężarka klimatyzacji - Wymiana"
 
 #. module: fleet
 #: help:fleet.vehicle,vin_sn:0
 msgid "Unique number written on the vehicle motor (VIN/SN number)"
-msgstr ""
+msgstr "Unikalny numer nadwozia samochodu (numer VIN/SN)"
 
 #. module: fleet
 #: selection:fleet.service.type,category:0
@@ -58,7 +58,7 @@ msgstr "Nieznany"
 #. module: fleet
 #: model:fleet.service.type,name:fleet.type_service_20
 msgid "Engine/Drive Belt(s) Replacement"
-msgstr ""
+msgstr "Układ rozrządu - wymiana"
 
 #. module: fleet
 #: view:fleet.vehicle.cost:0
@@ -74,12 +74,12 @@ msgstr "Diesel"
 #: code:addons/fleet/fleet.py:421
 #, python-format
 msgid "License Plate: from '%s' to '%s'"
-msgstr ""
+msgstr "Numery tablic rejestracyjnych: od '%s' do '%s'"
 
 #. module: fleet
 #: model:fleet.service.type,name:fleet.type_service_38
 msgid "Resurface Rotors"
-msgstr ""
+msgstr "Przezwojenie silnika"
 
 #. module: fleet
 #: view:fleet.vehicle.cost:0
@@ -90,12 +90,12 @@ msgstr "Grupuj wg..."
 #. module: fleet
 #: model:fleet.service.type,name:fleet.type_service_32
 msgid "Oil Pump Replacement"
-msgstr ""
+msgstr "Pompa oleju - wymiana"
 
 #. module: fleet
 #: model:fleet.service.type,name:fleet.type_service_18
 msgid "Engine Belt Inspection"
-msgstr ""
+msgstr "Diagnostyka układu rozrządu"
 
 #. module: fleet
 #: selection:fleet.vehicle.log.contract,cost_frequency:0
@@ -105,12 +105,12 @@ msgstr "Nie"
 #. module: fleet
 #: help:fleet.vehicle,power:0
 msgid "Power in kW of the vehicle"
-msgstr ""
+msgstr "Moc samochodu w kW"
 
 #. module: fleet
 #: model:fleet.service.type,name:fleet.type_service_service_2
 msgid "Depreciation and Interests"
-msgstr ""
+msgstr "Amortyzacja i oprocentowanie"
 
 #. module: fleet
 #: field:fleet.vehicle.log.contract,insurer_id:0
@@ -122,22 +122,22 @@ msgstr "Dostawca"
 #. module: fleet
 #: view:fleet.vehicle.log.fuel:0
 msgid "Write here any other information"
-msgstr ""
+msgstr "Wpisz tu wszelkie pozostałe informacje"
 
 #. module: fleet
 #: model:fleet.service.type,name:fleet.type_service_35
 msgid "Power Steering Hose Replacement"
-msgstr ""
+msgstr "Wąż wspomagania kierownicy - wymiana"
 
 #. module: fleet
 #: view:fleet.vehicle.log.contract:0
 msgid "Odometer details"
-msgstr ""
+msgstr "Dane licznika przebiegu kilometrów"
 
 #. module: fleet
 #: view:fleet.vehicle:0
 msgid "Has Alert(s)"
-msgstr ""
+msgstr "Alarm(y)"
 
 #. module: fleet
 #: field:fleet.vehicle.log.fuel,liter:0
@@ -147,7 +147,7 @@ msgstr "Litr"
 #. module: fleet
 #: model:ir.actions.client,name:fleet.action_fleet_menu
 msgid "Open Fleet Menu"
-msgstr ""
+msgstr "Menu floty pojazdów"
 
 #. module: fleet
 #: view:board.board:0
@@ -157,7 +157,7 @@ msgstr "Koszt paliwa"
 #. module: fleet
 #: model:fleet.service.type,name:fleet.type_service_9
 msgid "Battery Inspection"
-msgstr ""
+msgstr "Diagnostyka akumulatora"
 
 #. module: fleet
 #: field:fleet.vehicle,company_id:0
@@ -172,7 +172,7 @@ msgstr "Data faktury"
 #. module: fleet
 #: view:fleet.vehicle.log.fuel:0
 msgid "Refueling Details"
-msgstr ""
+msgstr "Informacje o tankowaniu"
 
 #. module: fleet
 #: code:addons/fleet/fleet.py:669
