--- a/mail/i18n/ja.po
+++ b/mail/i18n/ja.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: openobject-addons\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2013-06-07 19:36+0000\n"
-"PO-Revision-Date: 2013-10-19 05:47+0000\n"
+"PO-Revision-Date: 2013-11-03 05:02+0000\n"
 "Last-Translator: Yoshi Tashiro <yostashiro@gmail.com>\n"
 "Language-Team: Japanese <ja@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-10-20 05:04+0000\n"
-"X-Generator: Launchpad (build 16807)\n"
+"X-Launchpad-Export-Date: 2013-11-03 05:43+0000\n"
+"X-Generator: Launchpad (build 16820)\n"
 
 #. module: mail
 #: view:mail.followers:0
@@ -1163,7 +1163,7 @@ msgstr ""
 #. module: mail
 #: field:res.partner,notification_email_send:0
 msgid "Receive Messages by Email"
-msgstr ""
+msgstr "Eメールでメッセージ受信"
 
 #. module: mail
 #: model:mail.group,name:mail.group_best_sales_practices
