--- a/account/i18n/ja.po
+++ b/account/i18n/ja.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: openobject-addons\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2013-06-14 22:29+0000\n"
-"PO-Revision-Date: 2013-11-03 04:59+0000\n"
+"PO-Revision-Date: 2013-11-03 23:54+0000\n"
 "Last-Translator: Yoshi Tashiro <yostashiro@gmail.com>\n"
 "Language-Team: Japanese <ja@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-11-03 05:43+0000\n"
+"X-Launchpad-Export-Date: 2013-11-04 06:02+0000\n"
 "X-Generator: Launchpad (build 16820)\n"
 
 #. module: account
@@ -4519,7 +4519,7 @@ msgstr "ショートカット"
 #: field:report.account.receivable,type:0
 #: field:report.account_type.sales,user_type:0
 msgid "Account Type"
-msgstr "アカウントタイプ"
+msgstr "勘定科目タイプ"
 
 #. module: account
 #: model:ir.actions.act_window,help:account.action_bank_tree
@@ -4620,7 +4620,7 @@ msgstr "PayPalアカウント"
 #. module: account
 #: view:account.entries.report:0
 msgid "Acc.Type"
-msgstr "アカウントタイプ"
+msgstr "勘定科目タイプ"
 
 #. module: account
 #: selection:account.journal,type:0
@@ -4868,7 +4868,7 @@ msgstr "モデルからエントリーを作成"
 #: field:account.account,reconcile:0
 #: field:account.account.template,reconcile:0
 msgid "Allow Reconciliation"
-msgstr "消し込みの許可"
+msgstr "消込許可"
 
 #. module: account
 #: constraint:account.account:0
@@ -5238,7 +5238,7 @@ msgstr ""
 #: field:account.payment.term,active:0
 #: field:account.tax,active:0
 msgid "Active"
-msgstr "アクティブ"
+msgstr "有効"
 
 #. module: account
 #: view:account.bank.statement:0
@@ -5723,7 +5723,7 @@ msgstr "期首日"
 #. module: account
 #: model:account.account.type,name:account.account_type_asset_view1
 msgid "Asset View"
-msgstr ""
+msgstr "資産ビュー"
 
 #. module: account
 #: model:ir.model,name:account.model_account_common_account_report
@@ -7451,7 +7451,7 @@ msgstr ""
 #. module: account
 #: view:account.account.template:0
 msgid "Internal notes..."
-msgstr ""
+msgstr "内部注記..."
 
 #. module: account
 #: constraint:account.account:0
@@ -8674,7 +8674,7 @@ msgstr ""
 #: model:ir.actions.act_window,name:account.action_account_type_form
 #: model:ir.ui.menu,name:account.menu_action_account_type_form
 msgid "Account Types"
-msgstr "アカウントタイプ"
+msgstr "勘定科目タイプ"
 
 #. module: account
 #: model:email.template,subject:account.email_template_edi_invoice
@@ -8842,7 +8842,7 @@ msgstr "仕入先"
 #. module: account
 #: view:account.journal:0
 msgid "Accounts Type Allowed (empty for no control)"
-msgstr "許可アカウントタイプ（制御なしは空）"
+msgstr "許可勘定科目タイプ（制御なしは空）"
 
 #. module: account
 #: view:account.payment.term:0
@@ -9375,7 +9375,7 @@ msgstr "財務レポート"
 #. module: account
 #: model:account.account.type,name:account.account_type_liability_view1
 msgid "Liability View"
-msgstr ""
+msgstr "負債ビュー"
 
 #. module: account
 #: report:account.account.balance:0
@@ -9765,7 +9765,7 @@ msgstr "期末日"
 #. module: account
 #: model:account.account.type,name:account.account_type_expense_view1
 msgid "Expense View"
-msgstr ""
+msgstr "費用ビュー"
 
 #. module: account
 #: field:account.move.line,date_maturity:0
@@ -10913,7 +10913,7 @@ msgstr "パートナ"
 #. module: account
 #: field:account.account,note:0
 msgid "Internal Notes"
-msgstr ""
+msgstr "内部注記"
 
 #. module: account
 #: model:ir.actions.act_window,name:account.action_account_fiscalyear
