--- a/crm/i18n/ja.po
+++ b/crm/i18n/ja.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: openobject-addons\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2013-06-07 19:36+0000\n"
-"PO-Revision-Date: 2013-11-03 01:29+0000\n"
+"PO-Revision-Date: 2013-11-03 07:41+0000\n"
 "Last-Translator: Yoshi Tashiro <yostashiro@gmail.com>\n"
 "Language-Team: Japanese <ja@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-11-03 05:43+0000\n"
+"X-Launchpad-Export-Date: 2013-11-04 06:02+0000\n"
 "X-Generator: Launchpad (build 16820)\n"
 
 #. module: crm
@@ -1298,7 +1298,7 @@ msgstr "拡張フィルタ…"
 #. module: crm
 #: view:crm.phonecall.report:0
 msgid "Phone calls which are in closed state"
-msgstr "閉じた状態の通話"
+msgstr "クローズ状態の通話"
 
 #. module: crm
 #: view:crm.phonecall.report:0
@@ -2541,7 +2541,7 @@ msgstr "新規見込み客との最初の接触"
 #. module: crm
 #: view:res.partner:0
 msgid "Calls"
-msgstr ""
+msgstr "通話"
 
 #. module: crm
 #: view:crm.lead:0
