--- a/account/i18n/ja.po
+++ b/account/i18n/ja.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: openobject-addons\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2013-06-14 22:29+0000\n"
-"PO-Revision-Date: 2013-11-03 23:54+0000\n"
+"PO-Revision-Date: 2013-11-05 15:32+0000\n"
 "Last-Translator: Yoshi Tashiro <yostashiro@gmail.com>\n"
 "Language-Team: Japanese <ja@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-11-04 06:02+0000\n"
+"X-Launchpad-Export-Date: 2013-11-06 05:50+0000\n"
 "X-Generator: Launchpad (build 16820)\n"
 
 #. module: account
@@ -491,7 +491,7 @@ msgstr "オプションの他の通貨で表現された金額"
 #. module: account
 #: view:account.journal:0
 msgid "Available Coins"
-msgstr ""
+msgstr "利用可能な硬貨"
 
 #. module: account
 #: field:accounting.report,enable_filter:0
@@ -675,7 +675,7 @@ msgstr ""
 #. module: account
 #: field:account.journal,profit_account_id:0
 msgid "Profit Account"
-msgstr ""
+msgstr "収益勘定"
 
 #. module: account
 #: code:addons/account/account_move_line.py:1156
@@ -828,7 +828,7 @@ msgstr ""
 #. module: account
 #: view:account.account:0
 msgid "Account code"
-msgstr ""
+msgstr "勘定コード"
 
 #. module: account
 #: selection:account.financial.report,display_detail:0
