--- a/crm/i18n/da.po
+++ b/crm/i18n/da.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: openobject-addons\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2013-06-07 19:36+0000\n"
-"PO-Revision-Date: 2013-09-22 20:36+0000\n"
+"PO-Revision-Date: 2013-11-05 21:39+0000\n"
 "Last-Translator: Per G. Rasmussen <pgr@msteknik.dk>\n"
 "Language-Team: Danish <da@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-09-23 05:35+0000\n"
-"X-Generator: Launchpad (build 16771)\n"
+"X-Launchpad-Export-Date: 2013-11-06 05:51+0000\n"
+"X-Generator: Launchpad (build 16820)\n"
 
 #. module: crm
 #: view:crm.lead.report:0
@@ -77,7 +77,7 @@ msgstr "Sæt team til Salgsafdeling"
 #. module: crm
 #: view:crm.lead2opportunity.partner.mass:0
 msgid "Select Opportunities"
-msgstr "Vælg emner"
+msgstr "Vælg kval. emner"
 
 #. module: crm
 #: model:res.groups,name:crm.group_fund_raising
@@ -177,7 +177,7 @@ msgstr "Kampagne"
 #. module: crm
 #: view:crm.lead:0
 msgid "Search Opportunities"
-msgstr "Søg emner"
+msgstr "Søg kval. emner"
 
 #. module: crm
 #: help:crm.lead.report,deadline_month:0
@@ -239,7 +239,7 @@ msgstr ""
 #. module: crm
 #: view:crm.lead:0
 msgid "Opportunities that are assigned to me"
-msgstr "Mine emner"
+msgstr "Mine kval. emner"
 
 #. module: crm
 #: field:res.partner,meeting_count:0
@@ -269,14 +269,14 @@ msgstr "Udeladte svar:"
 #. module: crm
 #: model:ir.model,name:crm.model_crm_merge_opportunity
 msgid "Merge opportunities"
-msgstr ""
+msgstr "Sammenlæg kval. emner"
 
 #. module: crm
 #: view:crm.lead.report:0
 #: model:ir.actions.act_window,name:crm.action_report_crm_lead
 #: model:ir.ui.menu,name:crm.menu_report_crm_leads_tree
 msgid "Leads Analysis"
-msgstr ""
+msgstr "Emne analyse"
 
 #. module: crm
 #: model:ir.actions.act_window,name:crm.crm_case_resource_type_act
@@ -371,7 +371,7 @@ msgstr ""
 #. module: crm
 #: field:res.partner,opportunity_ids:0
 msgid "Leads and Opportunities"
-msgstr ""
+msgstr "Emner og kval. emner"
 
 #. module: crm
 #: model:ir.actions.act_window,help:crm.relate_partner_opportunities
@@ -455,7 +455,7 @@ msgstr "Kategori"
 #. module: crm
 #: view:crm.lead.report:0
 msgid "#Opportunities"
-msgstr ""
+msgstr "#Kval. emner"
 
 #. module: crm
 #: code:addons/crm/crm_lead.py:640
@@ -721,7 +721,7 @@ msgstr ""
 #. module: crm
 #: view:crm.lead:0
 msgid "Leads Generation"
-msgstr ""
+msgstr "Emne generering"
 
 #. module: crm
 #: view:board.board:0
@@ -750,7 +750,7 @@ msgstr ""
 #. module: crm
 #: model:ir.actions.act_window,name:crm.action_crm_send_mass_convert
 msgid "Convert to opportunities"
-msgstr ""
+msgstr "Konvertér til kval. emner"
 
 #. module: crm
 #: model:ir.model,name:crm.model_sale_config_settings
@@ -776,7 +776,7 @@ msgstr ""
 #: view:crm.lead.report:0
 msgid ""
 "Leads/Opportunities that are assigned to one of the sale teams I manage"
-msgstr ""
+msgstr "Emner/kval. emner som hører til et af de salgsteams jeg styrer."
 
 #. module: crm
 #: field:crm.segmentation.line,expr_value:0
@@ -802,7 +802,7 @@ msgstr ""
 #. module: crm
 #: view:crm.lead2opportunity.partner.mass:0
 msgid "Convert to Opportunities"
-msgstr ""
+msgstr "Konverter til kval. emner"
 
 #. module: crm
 #: view:crm.lead:0
@@ -863,7 +863,7 @@ msgstr ""
 #: model:process.node,name:crm.process_node_opportunities0
 #: view:res.partner:0
 msgid "Opportunities"
-msgstr ""
+msgstr "Kval. emner"
 
 #. module: crm
 #: field:crm.segmentation,categ_id:0
@@ -888,7 +888,7 @@ msgstr ""
 #. module: crm
 #: view:crm.lead:0
 msgid "Leads that are assigned to me"
-msgstr ""
+msgstr "Mine emner"
 
 #. module: crm
 #: view:crm.lead:0
@@ -1356,7 +1356,7 @@ msgstr ""
 #: code:addons/crm/crm_lead.py:581
 #, python-format
 msgid "Merged opportunities"
-msgstr ""
+msgstr "Sammenlagte kval. emner"
 
 #. module: crm
 #: model:crm.case.categ,name:crm.categ_oppor7
@@ -1411,7 +1411,7 @@ msgstr ""
 #. module: crm
 #: view:crm.lead.report:0
 msgid "Leads/Opportunities which are in pending state"
-msgstr ""
+msgstr "Emner/kval. emner i afventer stadie"
 
 #. module: crm
 #: view:crm.phonecall:0
@@ -1445,7 +1445,7 @@ msgstr ""
 #: model:ir.actions.act_window,name:crm.action_merge_opportunities
 #: model:ir.actions.act_window,name:crm.merge_opportunity_act
 msgid "Merge leads/opportunities"
-msgstr ""
+msgstr "Sammenlæg emner/kval. emner"
 
 #. module: crm
 #: help:crm.case.stage,sequence:0
@@ -1460,12 +1460,12 @@ msgstr ""
 #. module: crm
 #: view:crm.lead.report:0
 msgid "Leads/Opportunities which are in open state"
-msgstr ""
+msgstr "Emner/kval. emner i åben stadie"
 
 #. module: crm
 #: view:crm.lead:0
 msgid "Opportunities that are assigned to any sales teams I am member of"
-msgstr ""
+msgstr "kval. emner som er tildelt salgsteams jeg er medlem af"
 
 #. module: crm
 #: model:mail.message.subtype,name:crm.mt_lead_stage
@@ -1519,7 +1519,7 @@ msgstr ""
 #. module: crm
 #: view:crm.lead.report:0
 msgid "Leads/Opportunities that are assigned to me"
-msgstr ""
+msgstr "Emner/kval. emner som jeg er tildelt"
 
 #. module: crm
 #: view:crm.lead.report:0
@@ -1570,7 +1570,7 @@ msgstr ""
 #. module: crm
 #: view:crm.lead.report:0
 msgid "Leads/Opportunities which are in done state"
-msgstr ""
+msgstr "Emner/kval.emner som er afsluttet"
 
 #. module: crm
 #: field:crm.lead.report,delay_close:0
@@ -1593,7 +1593,7 @@ msgstr ""
 #. module: crm
 #: view:crm.merge.opportunity:0
 msgid "Merge Leads/Opportunities"
-msgstr ""
+msgstr "Sammenlæg emner/kval. emner"
 
 #. module: crm
 #: field:crm.case.section,parent_id:0
@@ -1623,7 +1623,7 @@ msgstr ""
 #. module: crm
 #: view:crm.lead2opportunity.partner.mass:0
 msgid "Assign opportunities to"
-msgstr ""
+msgstr "Tildel kval. emner til"
 
 #. module: crm
 #: model:crm.case.categ,name:crm.categ_phone1
@@ -1706,7 +1706,7 @@ msgstr ""
 #. module: crm
 #: view:board.board:0
 msgid "Opportunities by Stage"
-msgstr ""
+msgstr "Kval. emner pr. stadie"
 
 #. module: crm
 #: model:process.transition,note:crm.process_transition_leadpartner0
@@ -1839,7 +1839,7 @@ msgstr ""
 #: help:crm.lead,type:0
 #: help:crm.lead.report,type:0
 msgid "Type is used to separate Leads and Opportunities"
-msgstr ""
+msgstr "Type bruges til at adskille emner og kval. emner"
 
 #. module: crm
 #: selection:crm.lead.report,creation_month:0
@@ -1874,7 +1874,7 @@ msgstr ""
 #: model:ir.model,name:crm.model_crm_case_section
 #: model:ir.ui.menu,name:crm.menu_crm_case_section_act
 msgid "Sales Teams"
-msgstr ""
+msgstr "Salgs teams"
 
 #. module: crm
 #: field:crm.case.stage,case_default:0
@@ -1889,7 +1889,7 @@ msgstr ""
 #. module: crm
 #: view:crm.lead.report:0
 msgid "Leads/Opportunities which are in New state"
-msgstr ""
+msgstr "Emner/kval. emner som er i \"Ny\" stadie"
 
 #. module: crm
 #: selection:crm.phonecall,state:0
@@ -1932,7 +1932,7 @@ msgstr ""
 #: selection:crm.lead2opportunity.partner,name:0
 #: selection:crm.lead2opportunity.partner.mass,name:0
 msgid "Merge with existing opportunities"
-msgstr ""
+msgstr "Sammenlæg med eksisterende kval. emner"
 
 #. module: crm
 #: view:crm.phonecall.report:0
@@ -1985,7 +1985,7 @@ msgstr ""
 #. module: crm
 #: view:crm.lead:0
 msgid "Open Opportunities"
-msgstr ""
+msgstr "Åbne kval. emner"
 
 #. module: crm
 #: model:crm.case.resource.type,name:crm.type_lead2
@@ -2084,7 +2084,7 @@ msgstr ""
 #: model:ir.actions.act_window,name:crm.action_report_crm_opportunity
 #: model:ir.ui.menu,name:crm.menu_report_crm_opportunities_tree
 msgid "Opportunities Analysis"
-msgstr ""
+msgstr "Analyse af kval. emner"
 
 #. module: crm
 #: view:crm.lead:0
@@ -2155,7 +2155,7 @@ msgstr ""
 #. module: crm
 #: view:crm.lead:0
 msgid "Leads that are assigned to any sales teams I am member of"
-msgstr ""
+msgstr "Emner der er tildelt til salgsteams jeg er medlem af"
 
 #. module: crm
 #: help:crm.case.section,alias_id:0
@@ -2271,7 +2271,7 @@ msgstr ""
 #. module: crm
 #: field:crm.merge.opportunity,opportunity_ids:0
 msgid "Leads/Opportunities"
-msgstr ""
+msgstr "Emner/kval. emner"
 
 #. module: crm
 #: field:crm.lead,fax:0
@@ -2404,7 +2404,7 @@ msgstr ""
 #. module: crm
 #: view:crm.merge.opportunity:0
 msgid "Select Leads/Opportunities"
-msgstr ""
+msgstr "Vælg emner/kval. emner"
 
 #. module: crm
 #: selection:crm.phonecall,state:0
@@ -2511,7 +2511,7 @@ msgstr ""
 #. module: crm
 #: model:process.transition,note:crm.process_transition_leadopportunity0
 msgid "Creating business opportunities from Leads"
-msgstr ""
+msgstr "Oprette kval. emner fra emner"
 
 #. module: crm
 #: model:crm.case.resource.type,name:crm.type_lead3
@@ -2759,7 +2759,7 @@ msgstr ""
 #: view:crm.lead.report:0
 #: model:ir.actions.act_window,name:crm.act_opportunity_stage
 msgid "Opportunities By Stage"
-msgstr ""
+msgstr "Kval. emner pr. stadie"
 
 #. module: crm
 #: selection:crm.lead.report,creation_month:0
@@ -2923,7 +2923,7 @@ msgstr ""
 #. module: crm
 #: view:crm.lead:0
 msgid "New Opportunities"
-msgstr ""
+msgstr "Nye kval. emner"
 
 #. module: crm
 #: field:crm.segmentation.line,operator:0
@@ -2982,7 +2982,7 @@ msgstr ""
 #: code:addons/crm/wizard/crm_lead_to_opportunity.py:89
 #, python-format
 msgid "Closed/Cancelled leads cannot be converted into opportunities."
-msgstr ""
+msgstr "Lukkede/annullerede emner kan ikke konverteres til kval. emner."
 
 #. module: crm
 #: view:crm.lead:0
