--- a/purchase/i18n/fi.po
+++ b/purchase/i18n/fi.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: openobject-addons\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2013-06-07 19:36+0000\n"
-"PO-Revision-Date: 2013-11-05 01:47+0000\n"
+"PO-Revision-Date: 2013-11-06 16:04+0000\n"
 "Last-Translator: Harri Luuppala <Unknown>\n"
 "Language-Team: Finnish <fi@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-11-06 05:51+0000\n"
+"X-Launchpad-Export-Date: 2013-11-07 05:51+0000\n"
 "X-Generator: Launchpad (build 16820)\n"
 
 #. module: purchase
@@ -122,7 +122,7 @@ msgstr "Konfiguraatiovirhe!"
 #, python-format
 msgid "You must first cancel all receptions related to this purchase order."
 msgstr ""
-"Sinun pitää ensin peruuttaa kaikki vastaanotot jotka liittyvät tähän "
+"Sinun pitää ensin peruuttaa kaikki vastaanotot, jotka liittyvät tähän "
 "ostotilaukseen"
 
 #. module: purchase
@@ -442,7 +442,7 @@ msgstr "Pyyntöpäivämäärä"
 #: view:purchase.order:0
 #: view:purchase.order.line:0
 msgid "Purchase Order Lines"
-msgstr "Ostotilauksen Rivit"
+msgstr "Ostotilausrivit"
 
 #. module: purchase
 #: help:purchase.order,dest_address_id:0
@@ -776,7 +776,7 @@ msgstr "Hinnasto"
 #. module: purchase
 #: selection:purchase.order,state:0
 msgid "Draft PO"
-msgstr "Hankintaehdotus"
+msgstr "Ostoehdotus"
 
 #. module: purchase
 #: code:addons/purchase/purchase.py:967
@@ -1416,7 +1416,7 @@ msgstr "Ostotilausrivi luo laskun"
 #: code:addons/purchase/purchase.py:1167
 #, python-format
 msgid "PO: %s"
-msgstr "Ostotilaus: %s"
+msgstr "OT: %s"
 
 #. module: purchase
 #: model:process.node,note:purchase.process_node_packinginvoice0
@@ -1981,7 +1981,7 @@ msgstr "Referenssiyksikkö"
 #: report:purchase.order:0
 #: field:purchase.report,validator:0
 msgid "Validated By"
-msgstr "Hyväksyjä"
+msgstr "Vahvistaja"
 
 #. module: purchase
 #: view:purchase.report:0
@@ -2008,7 +2008,7 @@ msgstr "Joulukuu"
 #. module: purchase
 #: view:purchase.report:0
 msgid "Total Orders Lines by User per month"
-msgstr "Ostotilaus rivejä käyttäjittäin ja kuukausittain yhteensä"
+msgstr ""
 
 #. module: purchase
 #: help:purchase.order,amount_untaxed:0
@@ -2046,17 +2046,17 @@ msgstr "Laskutettu"
 #: view:purchase.order.line:0
 #: field:stock.move,purchase_line_id:0
 msgid "Purchase Order Line"
-msgstr "Ostotilauksen rivi"
+msgstr "Ostotilausrivi"
 
 #. module: purchase
 #: selection:purchase.order.line,state:0
 msgid "Draft"
-msgstr "Vedos"
+msgstr "Ehdotus"
 
 #. module: purchase
 #: model:ir.model,name:purchase.model_purchase_order_group
 msgid "Purchase Order Merge"
-msgstr "Ostotilausten Yhdistäminen"
+msgstr "Ostotilausten yhdistäminen"
 
 #. module: purchase
 #: model:ir.actions.act_window,name:purchase.action_email_templates
@@ -2076,7 +2076,7 @@ msgstr "Marraskuu"
 #. module: purchase
 #: view:purchase.order.line:0
 msgid "Manual Invoices"
-msgstr "Käsin Laskutus"
+msgstr "Manuaalinen laskutus"
 
 #. module: purchase
 #: report:purchase.order:0
@@ -2097,6 +2097,12 @@ msgid ""
 "Bases on incoming shipments: let you create an invoice when receptions are "
 "validated."
 msgstr ""
+"Perustuu ostotilausriveihin: Sijoita yksittäiset rivit 'Invoice Control > "
+"Based on P.O. lines', josta voit vahvistaa laskutettavat rivit.\n"
+"Perustuu luotuihin laskuihin: Luo laskuehdotuksen, jonka voit vahvistaa "
+"myöhemmin.\n"
+"Perustuu: saapuneisiin toimituksiin: Sallii laskun luonnin samalla, kun "
+"vastaanotot vahvistetaan."
 
 #. module: purchase
 #: model:ir.ui.menu,name:purchase.menu_partner_categories_in_form
@@ -2257,7 +2263,7 @@ msgstr "Laskuehdotuksilla"
 #: model:ir.actions.act_window,name:purchase.action_purchase_order_report_all
 #: model:ir.ui.menu,name:purchase.menu_action_purchase_order_report_all
 msgid "Purchase Analysis"
-msgstr "Hankintojen Analysointi"
+msgstr "Ostoanalyysi"
 
 #. module: purchase
 #: report:purchase.order:0
@@ -2314,7 +2320,7 @@ msgstr "Maksuehto"
 #. module: purchase
 #: view:purchase.order:0
 msgid "Purchase orders which are in draft state"
-msgstr "Luonnostilassa olevat ostotilaukset"
+msgstr "Ostotilausehdotukset"
 
 #. module: purchase
 #: view:purchase.report:0
@@ -2325,7 +2331,7 @@ msgstr "Vuosi"
 #. module: purchase
 #: selection:purchase.config.settings,default_invoice_method:0
 msgid "Based on purchase order lines"
-msgstr "Perustuu hankintatilauksen riveihin"
+msgstr "Perustuu ostotilausriveihin"
 
 #. module: purchase
 #: model:ir.actions.act_window,help:purchase.act_res_partner_2_purchase_order
